<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="VisionStation" Id="{7eb87a4f-bd9b-06c1-3178-f931d1986431}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK VisionStation EXTENDS MachineStation
VAR_INPUT
	rIO					: REFERENCE TO Vision_IO_typ;
	rStation			: REFERENCE TO Station;
	rKickoutStation 	: REFERENCE TO Station;
	rTrayLoadStation 	: REFERENCE TO MultiStation;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	Payload			: Payload_typ;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT (__ISVALIDREF(rStation) AND __ISVALIDREF(rIO) AND __ISVALIDREF(rKickoutStation) AND __ISVALIDREF(rTrayLoadStation)) THEN
	ADSLOGSTR( ADSLOG_MSGTYPE_ERROR, 'Invalid reference at %s.', InstancePath);	// how to make this work?
	RETURN;
END_IF

IF Enable THEN
	IF NOT _Enable THEN
		;
	END_IF

	CASE State OF
		STN_WAIT:
			IF Run AND rStation.MoverInPosition THEN
				State	:= STN_CHECKMOVER;
				Payload	:= rStation.CurrentMover.Payload;
			END_IF

		STN_CHECKMOVER:
				
			rIO.Outputs.Inspect := TRUE; // Start inspect
			IF rIO.Inputs.VisionActive THEN
				State := STN_PROCESS;
			END_IF

		STN_PROCESS:
				IF NOT(rIO.Inputs.VisionActive)THEN
					IF rIO.Inputs.VisionPass THEN
						Payload.VisionPass 	:= TRUE;
						
					ELSIF rIO.Inputs.VisionFail THEN
						Payload.VisionPass 	:= FALSE;
						Payload.Reject		:= TRUE;
						
					ELSE // Failed to get feedback. TODO: Need alarm.
					END_IF;
					
					rIO.Outputs.Inspect := FALSE;
					State 				:= STN_SEND;
				END_IF;
					

		STN_SEND:
				
			IF Payload.Reject THEN
				rStation.CurrentMover.Payload	:= Payload;
				rStation.CurrentMover.MoveToStation(rKickoutStation);
				rStation.UnregisterCurrent();	
			ELSE
				rStation.CurrentMover.Payload	:= Payload;
				rStation.CurrentMover.MoveToMultiStation(rTrayLoadStation);
				rStation.UnregisterCurrent();
			END_IF;
			State								:= STN_WAIT;
		
		STN_ERROR:
	
	END_CASE

ELSIF _Enable THEN
	memset(ADR(rIO.Outputs), 0, SIZEOF(rIO.Outputs));
	State	:= STN_WAIT;
END_IF

//Save Previous Values
_Enable	:= Enable;]]></ST>
    </Implementation>
    <LineIds Name="VisionStation">
      <LineId Id="15" Count="2" />
      <LineId Id="9" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="76" Count="12" />
      <LineId Id="98" Count="0" />
      <LineId Id="204" Count="0" />
      <LineId Id="165" Count="2" />
      <LineId Id="105" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="158" Count="0" />
      <LineId Id="149" Count="0" />
      <LineId Id="154" Count="0" />
      <LineId Id="205" Count="0" />
      <LineId Id="155" Count="1" />
      <LineId Id="228" Count="0" />
      <LineId Id="209" Count="0" />
      <LineId Id="159" Count="0" />
      <LineId Id="144" Count="0" />
      <LineId Id="214" Count="1" />
      <LineId Id="212" Count="0" />
      <LineId Id="210" Count="1" />
      <LineId Id="120" Count="1" />
      <LineId Id="178" Count="0" />
      <LineId Id="242" Count="0" />
      <LineId Id="244" Count="1" />
      <LineId Id="243" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="179" Count="0" />
      <LineId Id="183" Count="1" />
      <LineId Id="174" Count="0" />
      <LineId Id="128" Count="6" />
      <LineId Id="229" Count="0" />
      <LineId Id="135" Count="3" />
      <LineId Id="18" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>